ProgressBar CSS consolidation, refs #392:  - Add a LESS variable @height for consistency with @line-height. These two variables control the default height of the widget and the default vertical position of the text  - Ensure inner font size inherit the widget font-size  - Add some comments, remove a "overflow:hidden" not needed

--- a/ProgressBar/themes/bootstrap/ProgressBar.less
+++ b/ProgressBar/themes/bootstrap/ProgressBar.less
@@ -25,18 +25,17 @@
 
 .d-progress-bar-styles() {
 	font-size: @font-size-small;
-	height: 1.8em;
+	height: @height;
 	vertical-align: middle;
-	overflow: hidden;
-	text-align: center; //use 'initial' to override and restore default value (left if ltr, right if rtl)
+	overflow: hidden; // Corners clipping
+	text-align: center; // Use 'initial' to override and restore default value (left if ltr, right if rtl)
 	.box-sizing(border-box);
 	.border-radius(4px);
-	border: 1px solid transparent; //a11y: high contrast
+	border: 1px solid transparent; // a11y: high contrast
 }
 
 .d-progress-bar-background-styles() {
 	position: absolute;
-	overflow: hidden;
 	top: 0;
 	height: 100%;
 	background-color: @progress-bg;
@@ -45,7 +44,7 @@
 
 .d-progress-bar-indicator-styles() {
 	position: relative;
-	overflow: hidden;
+	overflow: hidden; // Needed for the alignment of the two parts of the text
 	height: 100%;
 	.transition(width @transition-params);
 	background-color: @progress-bar-bg;
@@ -61,6 +60,7 @@
 
 .d-progress-bar-msg-styles() {
 	position: absolute;
+	font-size: inherit;
 	height: 100%;
 	width: 100%;
 	left: 0;
@@ -75,7 +75,8 @@
 
 .d-progress-bar-msg-invert-styles() {
 	position: absolute;
-	overflow: hidden;
+	font-size: inherit;
+	overflow: hidden; // Needed by text-overflow
 	height: 100%;
 	white-space: nowrap;
 	line-height: @line-height;
